you dont need tto know

--- a/display-media.cabal
+++ b/display-media.cabal
@@ -1,5 +1,5 @@
 cabal-version:      2.4
-name:               no-name
+name:               display-media
 version:            0.1.0.0
 
 author:             S3NP41
